src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>P7S1_Description255__c</fullName>
        <description>zur Validierungsprüfung eines befüllten Description-Feldes erforderlich. Wird über Workflow befüllt und kann dann in Formeln ausgewertet werden</description>
        <inlineHelpText>zur Validierungsprüfung eines befüllten Description-Feldes erforderlich. Wird über Workflow befüllt und kann dann in Formeln ausgewertet werden</inlineHelpText>
        <label>Description (255)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_ForInterface__c</fullName>
        <description>zeigt an, ob Opportunity für Schnittstellen gefiltert wird</description>
        <formula>CASE( RecordType.DeveloperName ,
  &apos;SomTv_BuchungenOhneVertraege&apos;, 1,
  &apos;SomTv_Commitment&apos;, 1,
  &apos;SomTv_Paket&apos;, 1,
  &apos;SomTv_Zubuchung&apos;, 1,
  0 ) = 1
 &amp;&amp;
  (INCLUDES( Account.ProRex_Rolle__c , &apos;Kunde&apos;) || INCLUDES( Account.ProRex_Rolle__c , &apos;Konzern&apos;))
&amp;&amp;
(INCLUDES( SomTv_Agentur__r.ProRex_Rolle__c  , &apos;Agentur&apos;) || INCLUDES( SomTv_Agentur__r.ProRex_Rolle__c  , &apos;Agenturverbund&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>zeigt an, ob Opportunity für Schnittstellen gefiltert wird:
- Datensatztyp = Commitment, Paket, Zubuchung, Buchungen ohne Vertrag
- Rolle Kunde bzw. Agentur zugewiesen
- Kunden-Agenturbeziehung definiert</inlineHelpText>
        <label>für Schnittstelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaBarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital (71M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaLizenz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lizenz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaPartBarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teil-Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaTV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaTicketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Hilfefeld für die Migration der Games-Daten</description>
        <inlineHelpText>Hilfefeld für die Migration der Games-Daten</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LostReasonDetails__c</fullName>
        <description>bis 05.10.2015: GAM_GrundDetail
Wird bei Datensatztyp Licensing-Opportunities Games die Opportunity auf verloren gesetzt und als Grund &quot;andere&quot; angegeben, muss diese hier genauer beschrieben werden</description>
        <inlineHelpText>If the opportunity is lost and the reason is &quot;other&quot;, please describe it in this field</inlineHelpText>
        <label>Grund detailliert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LostReason__c</fullName>
        <description>bis 5.10.2015: Gam_GrundVerloren
Wird bei Datensatztyp Licensing-Opportunities Games die Opportunity auf verloren gesetzt, muss hier eine Begründung ausgewählt werden. Bei Auswahl &quot;Andere&quot; muss diese noch in einem separaten Feld ausgeführt werden.</description>
        <inlineHelpText>If the opportunity is lost, please select a reason for it from the list</inlineHelpText>
        <label>Grund verloren</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Initial conversation</fullName>
                </value>
                <value>
                    <fullName>Evaluation negative</fullName>
                </value>
                <value>
                    <fullName>Decision negative</fullName>
                </value>
                <value>
                    <fullName>Term sheet</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Pricing and Performance</fullName>
                </value>
                <value>
                    <fullName>Exceeded Budget / Budget Shift</fullName>
                </value>
                <value>
                    <fullName>Internal Reasons</fullName>
                </value>
                <value>
                    <fullName>Business Model does not fit</fullName>
                </value>
                <value>
                    <fullName>Out of business, bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Planned End of Campaign</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Exclusiveness</fullName>
                </value>
                <value>
                    <fullName>Performance issues</fullName>
                </value>
                <value>
                    <fullName>Deal terms</fullName>
                </value>
                <value>
                    <fullName>Budget shift</fullName>
                </value>
                <value>
                    <fullName>Timing of campaign</fullName>
                </value>
                <value>
                    <fullName>Committment under negotiation</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Preis</fullName>
                </value>
                <value>
                    <fullName>Story fit</fullName>
                </value>
                <value>
                    <fullName>Competitor chosen</fullName>
                </value>
                <value>
                    <fullName>No availability</fullName>
                </value>
                <value>
                    <fullName>Different medium chosen</fullName>
                </value>
                <value>
                    <fullName>D&amp;A offer accepted</fullName>
                </value>
                <value>
                    <fullName>Weak target group</fullName>
                </value>
                <value>
                    <fullName>Ban on advertising</fullName>
                </value>
                <value>
                    <fullName>Rejected by channel</fullName>
                </value>
                <value>
                    <fullName>Rejected by AdF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Mn3Gewichtet__c</fullName>
        <description>MN3 gesamt multipliziert mit Wahrscheinlichkeit</description>
        <formula>P7S1_Mn3__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN3 gesamt multipliziert mit Wahrscheinlichkeit</inlineHelpText>
        <label>MN3 gewichtet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3__c</fullName>
        <formula>/* Achtung: Funktioniert nur mit ID15, nicht mit ID18! */

CASE( RecordTypeId ,

/*** 71M TV Opportunities ***/
/*** SomTv_BuchungenOhneVertraege ***/
&apos;012D0000000QmVy&apos; , SomTv_MN3__c ,
/*** SomTv_Commitment ***/
&apos;012D0000000QmVz&apos; , SomTv_MN3__c ,
/*** SomTv_Zubuchung ***/
&apos;012D0000000QmW2&apos; , SomTv_MN3__c ,
/*** SomTv_Paket ***/
&apos;012D0000000QmW0&apos; , SomTv_MN3__c ,
/*** SomTv_SalesPush ***/
&apos;012D0000000QmW1&apos; , SomTv_MN3__c ,

/*** 71M Digital Opportunities
=============== &gt;&gt;&gt;&gt;&gt; TO DO =&gt; Change Value for Digital Amount ***/
/*** Standard ***/
&apos;012200000004j8N&apos; , SomTv_MN3__c ,

/*** AdFactory Opportunities ***/
/*** SomTv_P7S1Intern ***/
&apos;012D0000000QnXP&apos; , 0 ,
/*** SomTv_AdFactory ***/
&apos;012D0000000QmVx&apos; , 0 ,

/*** Sales Excellence Opportunities ***/
&apos;012570000007Qaq&apos; , SomTv_MN3__c , /* Achtung: Funktioniert nur mit ID15, nicht mit ID18! */

/*** d&amp;a Sales Opportunities ***/
&apos;012570000007QjJ&apos; , SomTv_MN3__c,

/*** Maxdome Opportunities ***/
&apos;012570000007Qia&apos; , SomTv_MN3__c,

/*** 7Ventures Opportunities ***/
/*** Ven_Default ***/
&apos;01257000000QqI0&apos; , Ven_FullNetPotentialCurrentYear__c ,

/*** All Other Opportunities ***/
Amount
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 gesamt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_NewOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>neuer Inhaber der Opportunity, wird beim Speichern als Inhaber übernommen und geleert.</description>
        <inlineHelpText>neuer Inhaber der Opportunity, wird beim Speichern als Inhaber übernommen und geleert.</inlineHelpText>
        <label>Neuer Inhaber</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_OldOwnerEmail__c</fullName>
        <description>E-Mail des alten Inhabers. Hilfsfeld für Versand der Inhaber-Änderungs-Mail</description>
        <inlineHelpText>E-Mail des alten Inhabers. Hilfsfeld für Versand der Inhaber-Änderungs-Mail</inlineHelpText>
        <label>Alter Inhaber (E-Mail)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P7S1_OpportunityDashboardDate__c</fullName>
        <description>Date is used for Dashboard grouping by year</description>
        <formula>IF (
ISBLANK ( TEXT ( SomTv_Jahr__c ) ) ,
CloseDate ,
DATE ( VALUE ( TEXT ( SomTv_Jahr__c ) ) , MONTH( CloseDate ) , DAY( CloseDate ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date is used for Dashboard grouping by year</inlineHelpText>
        <label>Opportunity Dashboard Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_OpportunityOwnerUnit__c</fullName>
        <formula>Owner.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_OwnerOpptiAccountEqual__c</fullName>
        <description>Inhaber von Opportunity und Account sind identisch</description>
        <formula>OwnerId =  Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inhaber von Opportunity und Account sind identisch</inlineHelpText>
        <label>Inhaber Oppt und Account identisch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_OwnerUnit__c</fullName>
        <formula>Owner.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Opportunity-Inhaber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Plausibilitaetsfehler__c</fullName>
        <formula>IF( LEN(

IF( ISBLANK( Name ), &quot;Name fehlt&quot; &amp; BR(),&quot;&quot;) &amp;
IF( LEN( P7S1_Description255__c ) &lt; 10 , &quot;Beschreibung fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF( ISBLANK( P7S1_CustomerProduct__c ), &quot;Kundenprodukt fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF( ISBLANK( Kampagnenstart__c ), &quot;Kampagnenstart fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF( ISBLANK( Kampagnenende__c ), &quot;Kampagnenende fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF(
  AND(
   P7S1_HasMediaTV__c = FALSE,
   P7S1_HasMediaDigital__c = FALSE,
   P7S1_HasMediaLizenz__c = FALSE,
   P7S1_HasMediaBarter__c = FALSE,
   P7S1_HasMediaTicketing__c = FALSE
  ), &quot;Media-Baustein fehlt&quot; &amp; BR(), &quot;&quot;)
) = 0 , &quot;keine&quot; ,

IF( ISBLANK( Name ), &quot;Name fehlt&quot; &amp; BR(),&quot;&quot;) &amp;
IF( LEN( P7S1_Description255__c ) &lt; 10 , &quot;Beschreibung fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF( ISBLANK( P7S1_CustomerProduct__c ), &quot;Kundenprodukt fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF( ISBLANK( Kampagnenstart__c ), &quot;Kampagnenstart fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF( ISBLANK( Kampagnenende__c ), &quot;Kampagnenende fehlt&quot; &amp; BR(), &quot;&quot;) &amp;
IF(
  AND(
   P7S1_HasMediaTV__c = FALSE,
   P7S1_HasMediaDigital__c = FALSE,
   P7S1_HasMediaLizenz__c = FALSE,
   P7S1_HasMediaBarter__c = FALSE,
   P7S1_HasMediaTicketing__c = FALSE
  ), &quot;Media-Baustein fehlt&quot; &amp; BR(), &quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plausibilitätsfehler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnet private Opportunity, auf die nur der Inhaber und dessen Rollenhierarchie zugreifen kann.</description>
        <inlineHelpText>Kennzeichnet private Opportunity, auf die nur der Inhaber und dessen Rollenhierarchie zugreifen kann.</inlineHelpText>
        <label>Privat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_SphereCopy__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>P7S1_SphereCopy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <formula>Text( Owner.P7S1_Sphere__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P7S1_Sphere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_StartdateofselectedOppYear__c</fullName>
        <description>Zeigt das Datum 01.01. des für die Opp ausgewählten Jahres an.
Technisch für Aggregationen notwendig</description>
        <formula>DATE ( VALUE ( TEXT ( SomTv_Jahr__c ) ) , 01 , 01 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Startdate of selected Opp Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_UniqueCounter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_Yield__c</fullName>
        <formula>IF( P7S1_Bmv__c &lt;= 0, 0 , P7S1_Mn3__c / P7S1_Bmv__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield gesamt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSD_AnzahlVerkaufseinheitenGeschaetzt__c</fullName>
        <inlineHelpText>erwartete Verkaufseinheiten</inlineHelpText>
        <label>Anzahl Verkaufseinheiten (geschätzt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSD_CustomerBaseGeschaetzt__c</fullName>
        <inlineHelpText>erwartete Kundenbasis</inlineHelpText>
        <label>Customer Base (geschätzt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSD_DurchschnittlProKopfUmsatz__c</fullName>
        <inlineHelpText>Monatlicher durchschnittlicher Kundenumsatz (häufig vom Kunden zu zahlender Monatsbeitrag netto)</inlineHelpText>
        <label>durchschnittl. Pro-Kopf Umsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSD_ProKopfPraemie__c</fullName>
        <inlineHelpText>einmalige Abschlussprovision pro verkaufte Einheit</inlineHelpText>
        <label>Pro Kopf Prämie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSD_RevenueShareCustomerbaseGesamt__c</fullName>
        <inlineHelpText>Prozentsatz der Umsatzbeteiligung am monatlichen Kundenumsatz</inlineHelpText>
        <label>Revenue Share Customerbase (gesamt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSD_VariablerUmsatzRevShare__c</fullName>
        <formula>PSD_CustomerBaseGeschaetzt__c *   PSD_DurchschnittlProKopfUmsatz__c *  PSD_RevenueShareCustomerbaseGesamt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Base x Kundenumsatzbeteiligung in % x durchschnittl. Pro Kopf Umsatz</inlineHelpText>
        <label>variabler Umsatz (Rev Share)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSD_variableUmsatzanteileGesamt__c</fullName>
        <formula>PSD_VariablerUmsatzRevShare__c +  PSD_variablerUmsatzProKopfPraemie__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>variabler Umsatz (pro Kopf Prämie) + variabler Umsatz (Rev Share)</inlineHelpText>
        <label>variable Umsatzanteile (gesamt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSD_variablerUmsatzProKopfPraemie__c</fullName>
        <formula>PSD_ProKopfPraemie__c *   PSD_AnzahlVerkaufseinheitenGeschaetzt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anzahl verkaufte Einheiten x einmalige Abschlussprovision</inlineHelpText>
        <label>variabler Umsatz (pro Kopf Prämie)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKonto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gewähren wir für diesen Auftrag Skonto?</description>
        <inlineHelpText>Gewähren wir für diesen Auftrag Skonto?</inlineHelpText>
        <label>Skonto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sgn_AdFormat__c</fullName>
        <description>Description of ad formats that belong to this opportunity</description>
        <inlineHelpText>Description of ad formats that belong to this opportunity</inlineHelpText>
        <label>Ad Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_Assets__c</fullName>
        <description>Description of assets that belong to this opportunity</description>
        <inlineHelpText>Description of assets that belong to this opportunity</inlineHelpText>
        <label>Assets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sgn_BMVplanned__c</fullName>
        <description>Brutto Media Volume planned</description>
        <inlineHelpText>Brutto Media Volume planned</inlineHelpText>
        <label>BMV (planned)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sgn_BMVverified__c</fullName>
        <description>Brutto Media Volume verified</description>
        <inlineHelpText>Brutto Media Volume verified</inlineHelpText>
        <label>BMV (verified)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sgn_Budget__c</fullName>
        <description>Budget that is allocated for this opportunity</description>
        <inlineHelpText>Budget that is allocated for this opportunity</inlineHelpText>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sgn_CNAMING__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please activate this field if a CNAME or Canonical Name record that links an alias name to partner&apos;s true or canonical domain name has been implemented (y/n)</description>
        <inlineHelpText>Please activate this field if a CNAME or Canonical Name record that links an alias name to partner&apos;s true or canonical domain name has been implemented (y/n)</inlineHelpText>
        <label>CNAMING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sgn_CPA__c</fullName>
        <description>Cost Per Action</description>
        <inlineHelpText>Cost Per Action</inlineHelpText>
        <label>CPA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_CPI__c</fullName>
        <description>Cost Per Installation</description>
        <inlineHelpText>Cost Per Installation</inlineHelpText>
        <label>CPI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_CPM__c</fullName>
        <description>Cost Per Mille (thousand advertising impressions)</description>
        <inlineHelpText>Cost Per Mille (thousand advertising impressions)</inlineHelpText>
        <label>CPM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_CPX__c</fullName>
        <description>Partner&apos;s accounting approach</description>
        <inlineHelpText>Partner&apos;s accounting approach</inlineHelpText>
        <label>CPX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPP</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sgn_CoBranding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please activate this field if the partner has set up a co-branded site for us</description>
        <inlineHelpText>Please activate this field if the partner has set up a co-branded site for us</inlineHelpText>
        <label>Co-Branding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sgn_CountryMarket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country name</description>
        <inlineHelpText>Country name</inlineHelpText>
        <label>Country / Market</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>P7S1_Country__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>P7S1_Country__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sgn_Games__c</fullName>
        <description>Enumeration of the partner&apos;s games</description>
        <inlineHelpText>Enumeration of the partner&apos;s games</inlineHelpText>
        <label>Games</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sgn_IVWPixel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this field if an IVW Pixel has been implemented for the campaign</description>
        <inlineHelpText>Please check this field if an IVW Pixel has been implemented for the campaign</inlineHelpText>
        <label>IVW Pixel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sgn_InclOOPortals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please activate this field if O&amp;O Portals are included</description>
        <inlineHelpText>Please activate this field if O&amp;O Portals are included</inlineHelpText>
        <label>Incl. O&amp;O Portals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sgn_LinkURL__c</fullName>
        <description>Forward Link to the registration page of the game</description>
        <inlineHelpText>Forward Link to the registration page of the game</inlineHelpText>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sgn_MG__c</fullName>
        <description>Plesase enter the minimum guarantee - usually as a  % value</description>
        <inlineHelpText>Plesase enter the minimum guarantee - usually as a  % value</inlineHelpText>
        <label>MG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_OpportunityType__c</fullName>
        <description>Feld zurm setzen des Opp recType per Workflow nach der Migration.</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Display-CPM</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>3rd Party - Traffic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sgn_Platforms__c</fullName>
        <description>Enumeration of the platforms for the campaign</description>
        <inlineHelpText>Enumeration of the platforms for the campaign</inlineHelpText>
        <label>Platforms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sgn_RevShare__c</fullName>
        <description>Please enter the conditions for the RevShare deal</description>
        <inlineHelpText>Please enter the conditions for the RevShare deal</inlineHelpText>
        <label>RevShare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_RevSharerecoupable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please activate this field if the RevShare shall be recouped (y/n)</description>
        <inlineHelpText>Please activate this field if the RevShare shall be recouped (y/n)</inlineHelpText>
        <label>RevShare recoupable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sgn_SpecialAgreements__c</fullName>
        <label>Special Agreements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sgn_System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>IOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sgn_TVChannel__c</fullName>
        <description>Campaign&apos;s TV Channel</description>
        <inlineHelpText>Campaign&apos;s TV Channel</inlineHelpText>
        <label>TV-Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sgn_ZeitraumEnddatum__c</fullName>
        <description>Campaign end date</description>
        <inlineHelpText>Campaign end date</inlineHelpText>
        <label>Zeitraum Enddatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sgn_ZeitraumStartdatum__c</fullName>
        <description>Campaign start date</description>
        <inlineHelpText>Campaign start date</inlineHelpText>
        <label>Zeitraum Startdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_AnteilTVDigital__c</fullName>
        <description>Anteil des MN2 Gesamtwertes der auf TV Digtal entfällt</description>
        <inlineHelpText>Anteil des MN2 Gesamtwertes der auf TV Digtal entfällt</inlineHelpText>
        <label>Anteil TV Digital</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_AnteilTVDigitalgewichtet__c</fullName>
        <description>Gewichteter Anteil des MN2 Gesamtwertes der auf TV Digtal entfällt</description>
        <formula>SomDig_AnteilTVDigital__c  * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gewichteter Anteil des MN2 Gesamtwertes der auf TV Digtal entfällt</inlineHelpText>
        <label>Anteil TV Digital (gewichtet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Mn2Gewonnen__c</fullName>
        <description>Feld wird mit MN2-Wert automatisch befüllt, wenn die Opportunity gewonnen ist. Ist ein reines Hilfsfeld für die SomDig z.B. für Berichte (KV 1396)</description>
        <formula>IF(Probability =1,  MN2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Feld wird mit MN2-Wert automatisch befüllt, wenn die Opportunity gewonnen ist.</inlineHelpText>
        <label>MN2 Gewonnen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Uebergeordnete_B2B_Aktion__c</fullName>
        <description>Zeigt den Namen der B2B Aktion an, die der Primären Kampagnenquelle übergeordnet ist.</description>
        <formula>IF (
ISBLANK ( Campaign.ParentId ) ,
&apos;keine übergeordnete B2B Aktion&apos; ,
Campaign.Parent.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt den Namen der B2B Aktion an, die der Primären Kampagnenquelle übergeordnet ist.</inlineHelpText>
        <label>Übergeordnete B2B Aktion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbetraeger__c</fullName>
        <description>Welche Werbeträger sind/werden in der Opportunitiy berücksichtigt?</description>
        <inlineHelpText>Welche Werbeträger sind/werden in der Opportunitiy berücksichtigt?</inlineHelpText>
        <label>Werbeträger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>autoplenum.de</fullName>
                </value>
                <value>
                    <fullName>bigpoint.com</fullName>
                </value>
                <value>
                    <fullName>bundesliga.de</fullName>
                </value>
                <value>
                    <fullName>finanzfernsehen.de</fullName>
                </value>
                <value>
                    <fullName>gamepro.de</fullName>
                </value>
                <value>
                    <fullName>gamestar.de</fullName>
                </value>
                <value>
                    <fullName>gesund.tv</fullName>
                </value>
                <value>
                    <fullName>gesundheit.de</fullName>
                </value>
                <value>
                    <fullName>kabeleins.de</fullName>
                </value>
                <value>
                    <fullName>lokalisten.de</fullName>
                </value>
                <value>
                    <fullName>motor-talk.de</fullName>
                </value>
                <value>
                    <fullName>motorvision.de</fullName>
                </value>
                <value>
                    <fullName>myvideo.de</fullName>
                </value>
                <value>
                    <fullName>n24.de</fullName>
                </value>
                <value>
                    <fullName>promipool.de</fullName>
                </value>
                <value>
                    <fullName>prosieben.de</fullName>
                </value>
                <value>
                    <fullName>ran.de</fullName>
                </value>
                <value>
                    <fullName>sat1.de</fullName>
                </value>
                <value>
                    <fullName>sevenload.com</fullName>
                </value>
                <value>
                    <fullName>sixx.de</fullName>
                </value>
                <value>
                    <fullName>sport1.de</fullName>
                </value>
                <value>
                    <fullName>twitch.tv</fullName>
                </value>
                <value>
                    <fullName>werweisswas.de</fullName>
                </value>
                <value>
                    <fullName>wetter.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTV_Innerhalb_Commitment__c</fullName>
        <formula>IF(
     SomTv_MutterOpportunity__r.RecordType.DeveloperName == &quot;SomTv_Commitment&quot;
  || SomTv_MutterOpportunity__r.RecordType.DeveloperName == &quot;SomTv_Zubuchung&quot;,

  &quot;Ja&quot;,
  &quot;Nein&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Innerhalb Commitment / Zubuchung</label>
        <type>Text</type>
    </fields>
</CustomObject>